--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
     "preact": "https://esm.sh/preact@10.19.6",
     "preact/": "https://esm.sh/preact@10.19.6/",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.0",
     "lucide-preact": "https://esm.sh/lucide-preact@0.300.0"
   },
   "compilerOptions": {
